simple inelastic ball bouncing. first attempt.

--- a/bounce.html
+++ b/bounce.html
@@ -3,7 +3,7 @@
 
 <head>
 <title> Inelastic Bounce </title>
-<script src="./lib/three.min.js"></script>
+<script src="js/three.min.js"></script>
 <style>
 body{
 background : #C0C0C0;
@@ -15,7 +15,7 @@ height: 1200px;
 }
 
 </style>
-<script src="./lib/bounce.js"></script>
+<script src="js/bounce.js"></script>
 </head>
 
 <body onload='load()'>
